--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                           <div class="form">
                             <form id="submit-form" action="">
                               <p class="full-width">
-                                <input type="tel" id="mobile_code" placeholder="Phone Number" class="form-input" name="number">
+                                <input type="tel" id="mobile_code" placeholder="Phone Number*" class="form-input" name="number">
                                 <small class="phone-error"></small>
                               </p>
                               <p class="full-width">
@@ -39,7 +39,7 @@
                                 <small class="name-error"></small>
                               </p>
                               <p class="full-width d-flex justify-content-between">
-                                <input id="code" class="form-input" type="password" placeholder="Enter Graphic Code">
+                                <input id="code" class="form-input" type="password" placeholder="Enter Graphic Code*">
                                 <img style="height: 56px;" src="./img/code.html" alt="">
                               </p>
                               <p>
