--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
         <div class="all-content">
             <div class="content">
                 <div class="image">
-                    <img style="width: 100px; margin-right: 16px;" src="./img/head_6.png" alt="">
+                    <img src="./img/head_6.png" alt="">
                 </div>
                 <div class="des">
                     <h3>Account: 8801773302956</h3>
@@ -53,7 +53,7 @@
     </div>
     </section>
 
-    <section class="sec2">
+    <section class="profile-sec2 sec2">
         <div class="header_container">
             <ul>
                 <li><a href="funding-records.html"><img style="width: 25px;" src="./img/Fundingrecords.639dabdd.png" alt=""><span>Funding Records</span></a></li>
@@ -74,7 +74,7 @@
         </div>
     </section>
     </section>
-    <section class="profile-sec2">
+    <section class="profile-sec3">
         <div class="header_container">
             <h2 style="padding: 20px;">Earnings Data</h2>
             <ul>
@@ -92,7 +92,7 @@
             <ul>
                 <li><a href="#"><h3>0</h3><span>Task Completed Today</span></a></li>
                 <li><a href="#"><h3>0</h3><span>Remaining Tasks For Today</span></a></li>
-                <li><a href="#"><h3>0</h3><span>Total Earning</span></a></li>
+                <li><a href="#"></a></li>
             </ul>
 
         </div>
