--- a/index.html
+++ b/index.html
@@ -108,68 +108,38 @@
             <div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
-                                        <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
-                                        <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
-                                        <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
-                                        <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
+                                <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
+                                <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item active">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
-                                        <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
-                                        <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
-                                        <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
-                                        <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
+                                <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
+                                <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item active">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
-                                        <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
-                                        <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
+                                <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
+                                <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
                             </div>
-                            <div class="col-sm-6">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
-                                        <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
-                                        <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item active">
+                        <div class="card">
+                            <div class="card-body">
+                                <img style="display: block; margin: auto; width: 50px; height: 50px; object-fit: cover; " src="./img/head_70.png" alt="">
+                                <h3 style="text-align: center; font-weight: 400; font-size: 18px;">Congratulations <span>****3117</span></h3>
+                                <p style="text-align: center; font-size: 16px; font-weight: 300;" class="card-text">Some make up the bulk of the card's content.</p>
                             </div>
                         </div>
                     </div>
