--- a/register.html
+++ b/register.html
@@ -31,11 +31,11 @@
                           <div class="form">
                             <form id="submit-form" action="">
                               <p class="full-width">
-                                <input type="tel" id="mobile_code" placeholder="Enter Phone Number" class="form-input" name="number">
+                                <input type="tel" id="mobile_code" placeholder="Enter Phone Number*" class="form-input" name="number">
                                 <small class="phone-error"></small>
                               </p>
                               <p class="full-width d-flex justify-content-between">
-                                <input id="graphic-code" class="form-input" type="password" placeholder="Enter Graphic Code">
+                                <input id="graphic-code" class="form-input" type="password" placeholder="Enter Graphic Code*">
                                 <img style="height: 56px;" src="./img/code.html" alt="">
                               </p>
 
